[package]
name = "macrocosm"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = {version = "1", features = ["derive"] }

[lib]
proc-macro = true
path = "src/plugins.rs"
name = "macrocosm"

[[bin]]
name = "app"
path = "src/main.rs"